Add libpq-dev to Travis CI config
Should ensure the CI stuff makes sure we can still compile the
PostgreSQL backend.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
       - cmake
       - libdb-dev
       - libcurl4-gnutls-dev
+      - libpq-dev
       - libsystemd-dev
       - nettle-dev
 before_script:
