Use an onak subdir for the keyd socket
Instead of putting keyd.sock file directly in /run create a /run/onak
which can then be owned by the onak user. Otherwise keyd will have
problems creating the socket when activated directly instead of via the
socket unit file.

--- a/debian/onak.service
+++ b/debian/onak.service
@@ -4,6 +4,8 @@ Documentation=man:keyd
 
 [Service]
 User=onak
+ExecStartPre=/bin/mkdir -m 0755 /run/onak
+ExecStartPre=/bin/chown onak /run/onak
 ExecStart=/usr/sbin/keyd -f
 ExecStop=/usr/bin/keydctl quit
 
