--- a/onak.ini.in
+++ b/onak.ini.in
@@ -9,7 +9,7 @@ logfile=@CMAKE_INSTALL_FULL_LOCALSTATEDIR@/log/onak.log
 loglevel=3
 ; Should we use the keyd backend?
 use_keyd=false
-sock_dir=@CMAKE_INSTALL_FULL_RUNSTATEDIR@
+sock_dir=@CMAKE_INSTALL_FULL_RUNSTATEDIR@/onak
 ; Maximum number of keys to return in a reply to an index, verbose index or
 ; get. Setting it to -1 will allow any size of reply.
 max_reply_keys=128
