--- a/debian/rules
+++ b/debian/rules
@@ -9,6 +9,6 @@ CFLAGS += -std=gnu99
 override_dh_installinit:
 	dh_installinit --no-start
 
-override_dh_systemd_enable:
-	dh_systemd_enable --no-enable debian/onak.service
-	dh_systemd_enable --no-enable debian/onak.socket
+override_dh_installsystemd:
+	dh_installsystemd --no-enable --no-start onak.service
+	dh_installsystemd --no-enable --no-start onak.socket
