Switch to RuntimeDirectory in systemd service file
Instead of the ExecStartPre commands for creating our runtime directory
switch to the correct approach, RuntimeDirectory. Thanks to Guillem
Jover for the pointer.

--- a/debian/onak.service
+++ b/debian/onak.service
@@ -4,8 +4,7 @@ Documentation=man:keyd
 
 [Service]
 User=onak
-ExecStartPre=+/bin/mkdir -p -m 0755 /run/onak
-ExecStartPre=+/bin/chown onak /run/onak
+RuntimeDirectory=/run/onak
 ExecStart=/usr/sbin/keyd -f
 ExecStop=/usr/bin/keydctl quit
 
