Move the CGI specific routines into cgi/ and split out UID escaping
The only piece from getcgi.c that anything other than the CGI needs is
the code to escape a UID. Move that into keyindex.c and shuffle the CGI
routines off to the subdirectory. The escaping routine could do with a
lot of improvement, but this is a start in terms of cleaning things up.

--- a/cgi/CMakeLists.txt
+++ b/cgi/CMakeLists.txt
@@ -1,9 +1,9 @@
 # CGI
-add_executable(add add.c)
+add_executable(add add.c getcgi.c)
 target_link_libraries(add libonak)
-add_executable(gpgwww gpgwww.c ../stats.c)
+add_executable(gpgwww gpgwww.c ../stats.c getcgi.c)
 target_link_libraries(gpgwww libonak)
-add_executable(hashquery hashquery.c)
+add_executable(hashquery hashquery.c getcgi.c)
 target_link_libraries(hashquery libonak)
-add_executable(lookup lookup.c)
+add_executable(lookup lookup.c getcgi.c)
 target_link_libraries(lookup libonak)
