--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Install build dependencies
+      run: sudo apt install libcurl4-gnutls-dev libdb-dev libsystemd-dev nettle-dev pkg-config
+
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build
 
