Fix systemd RuntimeDirectory
RuntimeDirectory should be a path relative to /run/, rather than an
absolute path. Fix.

--- a/debian/onak.service
+++ b/debian/onak.service
@@ -4,7 +4,7 @@ Documentation=man:keyd
 
 [Service]
 User=onak
-RuntimeDirectory=/run/onak
+RuntimeDirectory=onak
 ExecStart=/usr/sbin/keyd -f
 ExecStop=/usr/bin/keydctl quit
 
