--- a/debian/onak.service
+++ b/debian/onak.service
@@ -1,10 +1,10 @@
 [Unit]
 Description=Backend caching key daemon for onak OpenPGP keyserver
 Documentation=man:keyd
+Requires=onak.socket
 
 [Service]
 User=onak
-RuntimeDirectory=onak
 ExecStart=/usr/sbin/keyd -f
 ExecStop=/usr/bin/keydctl quit
 
