--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Homepage: https://www.earth.li/projectpurple/progs/onak.html
 Vcs-Browser: https://the.earth.li/gitweb/?p=onak.git;a=summary
 Vcs-Git: https://the.earth.li/git/onak.git
 Rules-Requires-Root: no
+Testsuite: autopkgtest
 
 Package: onak
 Architecture: any
