--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.1..3.31 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.1...3.31 FATAL_ERROR)
 project(onak VERSION 0.6.3 LANGUAGES C)
 
 include(CheckSymbolExists)
