--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: onak
 Section: net
 Priority: optional
 Maintainer: Jonathan McDowell <noodles@earth.li>
-Build-Depends: cmake,
-	debhelper-compat (= 13),
+Build-Depends: debhelper-compat (= 13)
+Build-Depends-Arch: cmake,
 	libcurl4-gnutls-dev | libcurl-dev,
 	libdb-dev,
 	libsystemd-dev (>= 214) [linux-any] | libsystemd-daemon-dev [linux-any],
